fix: banner buttons prosition and spacings

--- a/assets/stylesheets/karma-score.scss
+++ b/assets/stylesheets/karma-score.scss
@@ -133,6 +133,9 @@
 .mt-2 {
   margin-top: 0.8em !important;
 }
+.mt-2\.5 {
+  margin-top: 1em !important;
+}
 .mt-3 {
   margin-top: 1.2em !important;
 }
@@ -147,6 +150,9 @@
 }
 .mb-2 {
   margin-bottom: 0.8em !important;
+}
+.mb-2\.5 {
+  margin-bottom: 1em !important;
 }
 .mb-3 {
   margin-bottom: 1.2em !important;
@@ -164,6 +170,9 @@
 .pt-2 {
   padding-top: 0.8em !important;
 }
+.pt-2\.5 {
+  padding-top: 1em !important;
+}
 .pt-3 {
   padding-top: 1.2em !important;
 }
@@ -179,6 +188,9 @@
 .pb-2 {
   padding-bottom: 0.8em !important;
 }
+.pb-2\.5 {
+  padding-bottom: 1em !important;
+}
 .pb-3 {
   padding-bottom: 1.2em !important;
 }
@@ -187,6 +199,13 @@
 }
 .pb-5 {
   padding-bottom: 2em !important;
+}
+
+.pl-2\.5 {
+  padding-left: 1em !important;
+}
+.pr-2\.5 {
+  padding-right: 1em !important;
 }
 
 .k-btn {
